--- a/src/Vista/FrmInicio.form
+++ b/src/Vista/FrmInicio.form
@@ -55,9 +55,8 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="extendedState" type="int" value="6"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[740, 320]"/>
+      <Dimension value="[748, 372]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -80,12 +79,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="879" max="32767" attributes="0"/>
+          <Component id="jPanel1" min="-2" pref="732" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="413" max="32767" attributes="0"/>
+          <Component id="jPanel1" min="-2" pref="312" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
